--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,15 +1,26 @@
-[program:face_recognition]
-command=python3 /path/to/process_faces.py
-directory=/path/to/
-autostart=true
-autorestart=true
-stdout_logfile=/path/to/logs/face_recognition.log
-stderr_logfile=/path/to/logs/face_recognition_error.log
+[unix_http_server]
+file=/tmp/supervisor.sock   ; сокет для взаимодействия supervisorctl
 
-[program:telegram_bot]
-command=python3 /path/to/start_bot.py
-directory=/path/to/
-autostart=true
-autorestart=true
-stdout_logfile=/path/to/logs/telegram_bot.log
-stderr_logfile=/path/to/logs/telegram_bot_error.log
+[supervisord]
+logfile=/var/log/supervisord.log  ; основной лог
+pidfile=/tmp/supervisord.pid      ; PID-файл
+
+[rpcinterface:supervisor]
+supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
+
+[supervisorctl]
+serverurl=unix:///tmp/supervisor.sock ; использовать сокет
+
+[program:start_bot]
+command=python3 /path/to/start_bot.py ; команда запуска бота
+autostart=true                        ; автоматический запуск при старте supervisord
+autorestart=true                      ; перезапуск при сбое
+stderr_logfile=/var/log/start_bot.err.log ; файл для логов ошибок
+stdout_logfile=/var/log/start_bot.out.log ; файл для стандартных логов
+
+[program:face_recognition]
+command=python3 /path/to/face_recognition.py ; команда запуска скрипта распознавания лиц
+autostart=true                               ; автоматический запуск
+autorestart=true                             ; перезапуск при сбое
+stderr_logfile=/var/log/face_recognition.err.log ; файл для логов ошибок
+stdout_logfile=/var/log/face_recognition.out.log ; файл для стандартных логов
