--- a/supervisord.conf
+++ b/supervisord.conf
@@ -12,15 +12,15 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 serverurl=unix:///tmp/supervisor.sock ; использовать сокет
 
 [program:start_bot]
-command=python3 /path/to/start_bot.py ; команда запуска бота
+command=/SmartEntrance/.venv/bin/python3 /SmartEntrance/aiogram/start_bot.py ; команда запуска бота
 autostart=true                        ; автоматический запуск при старте supervisord
 autorestart=true                      ; перезапуск при сбое
-stderr_logfile=/var/log/start_bot.err.log ; файл для логов ошибок
-stdout_logfile=/var/log/start_bot.out.log ; файл для стандартных логов
+stderr_logfile=/SmartEntrance/log/start_bot.err.log ; файл для логов ошибок
+stdout_logfile=/SmartEntrance/log/start_bot.out.log ; файл для стандартных логов
 
 [program:face_recognition]
-command=python3 /path/to/face_recognition.py ; команда запуска скрипта распознавания лиц
+command=/SmartEntrance/.venv/bin/python3 /SmartEntrance/video_recognition/video_recognition.py ; команда запуска скрипта распознавания лиц
 autostart=true                               ; автоматический запуск
 autorestart=true                             ; перезапуск при сбое
-stderr_logfile=/var/log/face_recognition.err.log ; файл для логов ошибок
-stdout_logfile=/var/log/face_recognition.out.log ; файл для стандартных логов
+stderr_logfile=/SmartEntrance/log/face_recognition.err.log ; файл для логов ошибок
+stdout_logfile=/SmartEntrance/log/face_recognition.out.log ; файл для стандартных логов
