--- a/supervisord.conf
+++ b/supervisord.conf
@@ -2,7 +2,7 @@
 file=/tmp/supervisor.sock   ; сокет для взаимодействия supervisorctl
 
 [supervisord]
-logfile=/var/log/supervisord.log  ; основной лог
+logfile=/home/dishudu/SmartEntrance/log/supervisord.log  ; основной лог
 pidfile=/tmp/supervisord.pid      ; PID-файл
 
 [rpcinterface:supervisor]
@@ -12,15 +12,15 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 serverurl=unix:///tmp/supervisor.sock ; использовать сокет
 
 [program:start_bot]
-command=/SmartEntrance/.venv/bin/python3 /SmartEntrance/aiogram/start_bot.py ; команда запуска бота
+command=/home/dishudu/SmartEntrance/.venv/bin/python3 /home/dishudu/SmartEntrance/aiogram/start_bot.py ; команда запуска бота
 autostart=true                        ; автоматический запуск при старте supervisord
 autorestart=true                      ; перезапуск при сбое
-stderr_logfile=/SmartEntrance/log/start_bot.err.log ; файл для логов ошибок
-stdout_logfile=/SmartEntrance/log/start_bot.out.log ; файл для стандартных логов
+stderr_logfile=/home/dishudu/SmartEntrance/log/start_bot.err.log ; файл для логов ошибок
+stdout_logfile=/home/dishudu/SmartEntrance/log/start_bot.out.log ; файл для стандартных логов
 
 [program:face_recognition]
-command=/SmartEntrance/.venv/bin/python3 /SmartEntrance/video_recognition/video_recognition.py ; команда запуска скрипта распознавания лиц
+command=/home/dishudu/SmartEntrance/.venv/bin/python3 /home/dishudu/SmartEntrance/video_recognition/video_recognition.py ; команда запуска скрипта распознавания лиц
 autostart=true                               ; автоматический запуск
 autorestart=true                             ; перезапуск при сбое
-stderr_logfile=/SmartEntrance/log/face_recognition.err.log ; файл для логов ошибок
-stdout_logfile=/SmartEntrance/log/face_recognition.out.log ; файл для стандартных логов
+stderr_logfile=/home/dishudu/SmartEntrance/log/face_recognition.err.log ; файл для логов ошибок
+stdout_logfile=/home/dishudu/SmartEntrance/log/face_recognition.out.log ; файл для стандартных логов
